# GoogleTranslate

./: CMakeLists.txt  GoogleTranslate.pro  GoogleTranslate.pro.user.ec5b128  README.md  clicklabel.cpp  clicklabel.h  googletranslateweb.cpp  googletranslateweb.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.ui  newqapplication.cpp  newqapplication.h  percentratio.cpp  percentratio.h  resource.qrc  trayicon.cpp  trayicon.h  waitprogress.cpp  waitprogress.h
include/: application.h  circle_progress.h  clicked_label.h  logger.h  mainwindow.h  system_operate.h  tray_icon.h  web_requests.h  widget_ratio.h
src/: application.cpp  circle_progress.cpp  clicked_label.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  resource.qrc  system_operate.cpp  tray_icon.cpp  web_requests.cpp  widget_ratio.cpp
third_module/spdlog/include/spdlog/: common.h  spdlog-inl.h  spdlog.h
third_module/spdlog/include/spdlog/details/: registry.h
